navbar templates for developing, the first UI Kit component

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,5 +1,8 @@
 .app.dark{
     --bg-color: rgb(0, 0, 134);
+    --interted-bg-color: rgb(114, 178, 255);
     --primary-color: rgb(0, 136, 0);
     --secondary-color: rgb(0,150,150);
+    --inverted-primary-color: rgb(131, 255, 131);
+    --inverted-color: rgb(0,200,200);
 }
