--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -8,3 +8,9 @@
     color: var(--primary-color);
     min-height: 100vh;
 }
+.content_page{
+    display: flex;
+}
+.page_wrapper {
+flex-grow: 1;
+}
