--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -4,12 +4,13 @@
 @import "./variables/global.scss";
 .app{
     font: var(--font-m);
-    background-color: var(--bg-color);
+    background-color: var(--interdet-bg-color);
     color: var(--primary-color);
     min-height: 100vh;
 }
 .content_page{
     display: flex;
+    
 }
 .page_wrapper {
 flex-grow: 1;
