--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,9 +1,8 @@
 .app.light{
-    --bg-color: rgb(114, 178, 255);
-    --interted-bg-color: rgb(0, 0, 134);
-    --primary-color: rgb(131, 255, 131);
-    --secondary-color: rgb(0,200,200);
-
-    --inverted-primary-color: rgb(0, 136, 0);
-    --inverted-secondary-color: rgb(0,150,150);
+    --bg-color: rgb(114 178 255);
+    --interted-bg-color: rgb(0 0 134);
+    --primary-color: rgb(131 255 131);
+    --secondary-color: rgb(0 200 200);
+    --inverted-primary-color: rgb(0 136 0);
+    --inverted-secondary-color: rgb(0 150 150);
 }
