--- a/src/widgets/SideBar/ui/SideBar/sidebar.module.scss
+++ b/src/widgets/SideBar/ui/SideBar/sidebar.module.scss
@@ -1,4 +1,4 @@
-.sidebar{
+.sidebar {
     height: calc(100vh - var(--navbar-height));
     width: var(--sidebar-width);
     background-color: var(--interted-bg-color);
@@ -7,10 +7,11 @@
 }
 
 .collapsed {
-    width: var(--sidebar-width-collapsed);}
+    width: var(--sidebar-width-collapsed);
+}
 
-.switchers{   
-  position: absolute;
- display: flex;
- justify-content: center;
-    }
+.switchers {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+}
