--- a/src/widgets/SideBar/ui/SideBar/sidebar.module.scss
+++ b/src/widgets/SideBar/ui/SideBar/sidebar.module.scss
@@ -1,9 +1,9 @@
-.sidebar {
+.Sidebar {
     height: calc(100vh - var(--navbar-height));
     width: var(--sidebar-width);
-    background-color: var(--interted-bg-color);
+    background: var(--inverted-bg-color);
     position: relative;
-    transition: width 0.1s;
+    transition: width 0.3s;
 }
 
 .collapsed {
@@ -12,6 +12,12 @@
 
 .switchers {
     position: absolute;
+    bottom: 20px;
     display: flex;
     justify-content: center;
+    width: 100%;
+}
+
+.lang {
+    margin-left: 20px;
 }
