setting storybook, storybook decorators, storybook cases

--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,8 +1,8 @@
-.app.light {
-    --bg-color: rgb(114 178 255);
-    --interted-bg-color: rgb(0 0 134);
-    --primary-color: rgb(131 255 131);
-    --secondary-color: rgb(0 200 200);
-    --inverted-primary-color: rgb(0 136 0);
-    --inverted-secondary-color: rgb(0 150 150);
+:root {
+    --bg-color: #e8e8ea;
+    --inverted-bg-color: #090949;
+    --primary-color: #0232c2;
+    --secondary-color: #0449e0;
+    --inverted-primary-color: #049604;
+    --inverted-secondary-color: #04ff04;
 }
