--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -1,5 +1,6 @@
 .button {
     cursor: pointer;
+    color: var(--primary-color);
 }
 
 .clear {
@@ -8,4 +9,11 @@
     background: 0;
     border: 0;
     outline: 0;
+}
+
+.outline {
+    padding: 10px 15px;
+    border: 1px solid var(--bg-color);;
+    color: var(--primary-color);
+    background: none;
 }
