--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,8 +1,8 @@
 .app.dark {
-    --bg-color: rgb(0 0 134);
-    --interted-bg-color: rgb(114 178 255);
-    --primary-color: rgb(0 136 0);
-    --secondary-color: rgb(0 150 150);
-    --inverted-primary-color: rgb(131 255 131);
-    --inverted-color: rgb(0 200 200);
+    --bg-color: #090949;
+    --inverted-bg-color: #e8e8ea;
+    --primary-color: #049604;
+    --secondary-color: #04ff04;
+    --inverted-primary-color: #0232c2;
+    --inverted-secondary-color: #0452ff;
 }
