--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -1,18 +1,56 @@
 .Button {
-    cursor: pointer;
-    color: var(--primary-color);
+  cursor: pointer;
+  color: var(--primary-color);
+  padding: 15px 15px;
 }
 
 .clear {
-    padding: 0;
-    border: none;
-    background: none;
-    outline: none;
+  padding: 0;
+  border: none;
+  background: none;
+  outline: none;
 }
 
 .outline {
-    padding: 10px 15px;
-    border: 1px solid var(--primary-color);
-    color: var(--primary-color);
-    background: none;
+
+  border: 1px solid var(--primary-color);
+  color: var(--primary-color);
+  background: none;
+}
+.background {
+  background: var(--bg-color);
+  color: var(--primary-color);
+  border: none;
+}
+.backgroundInverted {
+  background: var(--inverted-bg-color);
+  color: var(--inverted-primary-color);
+  border: none;
+}
+.square {
+  padding: none;
+}
+.square.size_m {
+  width: var(--font-size-m);
+  height: var(--font-size-m);
+  font: var(--font-m);
+}
+.square.size_l {
+  width: var(--font-size-l);
+  height: var(--font-size-l);
+  font: var(--font-l);
+}
+.square.size_xl {
+  width: var(--font-size-xl);
+  height: var(--font-size-xl);
+  font: var(--font-xl);
+}
+.size_m{
+    font: var(--font-m)
+}
+.size_l{
+    font: var(--font-l)
+}
+.size_xl{
+    font: var(--font-xl)
 }
