--- a/src/widgets/SideBar/ui/SideBar/sidebar.module.scss
+++ b/src/widgets/SideBar/ui/SideBar/sidebar.module.scss
@@ -1,23 +1,45 @@
 .Sidebar {
-    height: calc(100vh - var(--navbar-height));
-    width: var(--sidebar-width);
-    background: var(--inverted-bg-color);
-    position: relative;
-    transition: width 0.3s;
+  height: calc(100vh - var(--navbar-height));
+  width: var(--sidebar-width);
+  background: var(--inverted-bg-color);
+  position: relative;
+  transition: width 0.3s;
 }
-
-.collapsed {
-    width: var(--sidebar-width-collapsed);
-}
-
 .switchers {
-    position: absolute;
-    bottom: 20px;
-    display: flex;
-    justify-content: center;
-    width: 100%;
+  position: absolute;
+  bottom: 20px;
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
 
 .lang {
-    margin-left: 20px;
+  margin-left: 20px;
+}
+.collapsed {
+  width: var(--sidebar-width-collapsed);
+
+  .switchers {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .lang {
+    margin-left: 0;
+  }
+}
+
+.collapsedBtn {
+  position: absolute;
+  right: -25px;
+  bottom: 25px;
+}
+.items{
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    margin-left: 10px;
+}
+.link{
+    margin-top: 10px;
 }
