--- a/src/widgets/SideBar/ui/SideBar/sidebar.module.scss
+++ b/src/widgets/SideBar/ui/SideBar/sidebar.module.scss
@@ -5,6 +5,7 @@
   position: relative;
   transition: width 0.3s;
 }
+
 .switchers {
   position: absolute;
   bottom: 20px;
@@ -16,30 +17,50 @@
 .lang {
   margin-left: 20px;
 }
+
+.collapseBtn {
+  position: absolute;
+  right: -32px;
+  bottom: 32px;
+}
+
+.items {
+  margin-top: 20px;
+  margin-left: 30px;
+  display: flex;
+  flex-direction: column;
+}
+
+.item {
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.link {
+  margin-left: 10px;
+  opacity: 1;
+}
+
+.icon {
+  fill: var(--inverted-primary-color);
+}
+
 .collapsed {
   width: var(--sidebar-width-collapsed);
 
   .switchers {
-    flex-direction: column;
-    align-items: center;
+      flex-direction: column;
+      align-items: center;
   }
 
   .lang {
-    margin-left: 0;
+      margin-left: 0;
   }
-}
 
-.collapsedBtn {
-  position: absolute;
-  right: -25px;
-  bottom: 25px;
-}
-.items{
-    margin-top: 20px;
-    display: flex;
-    flex-direction: column;
-    margin-left: 10px;
-}
-.link{
-    margin-top: 10px;
+  .link {
+      opacity: 0;
+      transition: 0.2s opacity;
+      width: 0;
+  }
 }
