--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -10,7 +10,7 @@
     --font-line-xl: 40px;
     --font-xl: var(--font-size-xl) / var(--font-line-xl) var(--font-family-main);
 
-    // Размеры
+    // Размеры;
     --navbar-height: 50px;
     --sidebar-width: 300px;
     --sidebar-width-collapsed: 80px;
@@ -20,4 +20,6 @@
 
     // Цвета
     --overlay-color: rgba(0 0 0 / 60%);
+    --red-light: rgb(255 0 0);
+    --red-dark: rgb(227 2 2);
 }
